[package]
name = "dataset"
version = "0.1.0"
authors = ["Kotone Shiinoha<kotone.shiinoha@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
	"."
]

[dependencies]
rand = "0.7.3"
serde = "1"
serde_json = "0.7"