[package]
name = "router-v1"
version = "0.1.0"
authors = ["Kotone Shiinoha<kotone.shiinoha@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
	"."
]

[dependencies]
jeep-train-macro = { path = "../../jeep-train-macro" }
jeep-train-prelude = { path = "../../jeep-train-prelude" }

dataset = { path = "../dataset" }
bench_macro = { path = "../bench_macro" }

actix-router = "0.2.4"

serde = "1"
env_logger = "0.7"
