[package]
name = "hello_world"
version = "0.1.0"
authors = ["Kotone Shiinoha<kotone.shiinoha@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jeep-train-prelude = { path = "../../jeep-train-prelude" }
jeep-train-macro = { path = "../../jeep-train-macro" }